--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.8.4"
   },
   "devDependencies": {
-    "eslint": "^8.0.0",
+    "eslint": "^8.57.1",
+    "globals": "^16.0.0",
     "prettier": "^2.5.0"
   },
   "engines": {
